--- a/Susant.html
+++ b/Susant.html
@@ -8,8 +8,8 @@
 
     <style>
     body{
-        background-color: aliceblue;
-        color: ghostwhite;
+        background-color: rgb(0, 0, 0);
+        color: Black;
         text-align: center;
     }
     </style>
