Working on Template

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>FreshValue</title>
 </head>
 <body>
-    <!-- Writing my first comment in HTML !!!-->
+    <!-- Welcome Title-->
     <h1> Welcome to FreshValue</h1> 
     <!--  <hr> creates a new horizontal line-->
     <hr>
