Finished Slide 9, inventory search page

--- a/Shobhit.html
+++ b/Shobhit.html
@@ -22,10 +22,20 @@
 
         </div>
         <div class = "mapSquare">
+            <h1 class = "center"> Funds on Your Account:</h1>
+            <text class = "text">
+                <h3><span style = "padding-left:20px"></span>• $0.00</h3>
+            </text>
+        <div class = "insideMap">
             <h1 class = "center"> Popular Items Near You:</h1>
-            <div class = "insideMap"></div>
-
-        </div>
+            <text class = "text">
+                <h1><span style = "padding-left:20px"></span>• ....................</h1>
+                <h1><span style = "padding-left:20px"></span>• ..........................</h1>
+                <h1><span style = "padding-left:20px"></span>• ....................</h1>
+                <h1><span style = "padding-left:20px"></span>• .........................</h1>
+                <h1><span style = "padding-left:20px"></span>• ....................</h1>
+            </text>
+            </div>
         <div class = "costSquare">
             <h1 class = center> Cost: </h1>
             <h1>$0.00</h1>
@@ -94,15 +104,15 @@
         background-color: darkgray;
         float: left;
         margin-left: 400;
-        margin-top: -118;
+        margin-top: -157;
     }
     .costSquare{
         background-color: darkgrey;
         height:100;
         width:300;
         float: bottom;
-        margin-left: 100px;
-        margin-top: 450;
+        margin-left: -400px;
+        margin-top: 300;
         align-items: right;
         
     }
