--- a/Shobhit.html
+++ b/Shobhit.html
@@ -11,7 +11,7 @@
 
         </div>
         <div class = "Gsquare">
-            <h1 class="center"> Grocery List: </h1>
+            <h1 class="center"> Grocery List: 🛒  </h1>
             <text class = "text">
                 <h1><span style = "padding-left:20px"></span>• ....................</h1>
                 <h1><span style = "padding-left:20px"></span>• ..........................</h1>
