--- a/Susant.html
+++ b/Susant.html
@@ -3,6 +3,7 @@
         FreshValue
     </title>
     <body>
+        <!-- Don't change the banner/topLabel class -->
         <div class = "topLabel">
             <h1 class = left>Fresh Value</h1>
             <div class = "t2">
@@ -21,15 +22,16 @@
             </text>
 
         </div>
-        
+        <!-- this is the map -->
         <div class = "mapSquare">
             <h1 class = "center"> Map</h1>
-            <div class = "insideMap"></div>
+            <img src = "file:///Users/susantraut/Documents/SWEN%20REPO/map.png" width = "580" height = "310">
 
         </div>
         <div class = "costSquare">
             <h1 class = center> Cost: </h1>
             <h1>$0.00</h1>
+            <!-- Delete everything inside after this line -->
             <div class = "drive">
                 <h1>DRIVE</h1>
             </div>
@@ -54,6 +56,7 @@
     </body>
 
     <style>
+        /*topLabel is the banner you need this*/
     .topLabel{
         width: "screen";
         height: 50;
@@ -75,6 +78,7 @@
         color: Black;
         text-align: center;
     }
+    /*Gsquare is the Grocery square*/
     .Gsquare{
         height: 400px;
         width: 300px;
@@ -82,6 +86,7 @@
         float: left;
         margin-left: 100px;
     }
+    /* You can delete this map square */
     .mapSquare{
         height: 400;
         width: 600;
@@ -89,6 +94,7 @@
         float: left;
         margin-left: 100;
     }
+    /*you don't need inside map class*/
     .insideMap{
         height:310;
         width:580;
@@ -106,6 +112,7 @@
         align-items: right;
         
     }
+    /*You can delete class after this line*/
     .drive{
         background-color: darkgrey;
         height:35;
