--- a/Susant#2.html
+++ b/Susant#2.html
@@ -7,7 +7,10 @@
         <div class = "topLabel">
             <h1 class = left>Fresh Value</h1>
             <div class = "t2">
-                <h1>⬅</h1>
+                <a href="file:///Users/susantraut/Documents/SWEN%20REPO/2221-SWEN-101-02-06-6/Susant.html">
+                    <h1>⬅</h1>
+                </a>
+                <!-- <h1>⬅</h1> -->
             </div>
 
         </div>
@@ -42,7 +45,7 @@
                 <h1>WALK</h1>
             </div>
             <div class = "time">
-                <h1>Time : 0 Minutes</h1>
+                <h1>Time : 9 Minutes</h1>
             </div>
             <div class = "go">
                 <br>
@@ -114,7 +117,7 @@
     }
     /*You can delete class after this line*/
     .drive{
-        background-color: darkgrey;
+        background-color: lightblue;
         height:35;
         width:110;
         align-items: left;
