--- a/Susant.html
+++ b/Susant.html
@@ -2,6 +2,9 @@
     <title>
         FreshValue
     </title>
+    <head>
+        <meta charset="UTF-8">
+    </head>
     <body>
         <!-- Don't change the banner/topLabel class -->
         <div class = "topLabel">
@@ -46,7 +49,10 @@
             </div>
             <div class = "go">
                 <br>
-                <h1>GO</h1>
+                <a href="file:///Users/susantraut/Documents/SWEN%20REPO/2221-SWEN-101-02-06-6/Susant%232.html">
+                    <h1>GO</h1>
+                </a>
+                <!-- <h1>GO</h1> -->
             </div>
         
         </div>
@@ -114,7 +120,7 @@
     }
     /*You can delete class after this line*/
     .drive{
-        background-color: darkgrey;
+        background-color: lightblue;
         height:35;
         width:110;
         align-items: left;
@@ -142,6 +148,7 @@
 
     }
     .go{
+        
         background-color: green;
         height:110;
         width:100;
