fixed the title

--- a/Devin.html
+++ b/Devin.html
@@ -4,7 +4,7 @@
     </title>
     <body>
         <div class="topLabel">
-            <h1> class = left>Fresh Value</h1>
+            <h1> Fresh Value</h1>
             <div class="t2">
                 <h1>⬅</h1>
             </div>
