--- a/Devin.html
+++ b/Devin.html
@@ -6,7 +6,9 @@
         <div class="topLabel">
             <h1> Fresh Value</h1>
             <div class="t2">
-                <h1>⬅</h1>
+                <a href="file:///Users/susantraut/Documents/SWEN%20REPO/2221-SWEN-101-02-06-6/HomePage.html">
+                    <h1>⬅</h1>
+                </a>
             </div>
         </div>
         <div class = "Gsquare">
