--- a/Britney.html
+++ b/Britney.html
@@ -6,9 +6,16 @@
         <link rel="stylesheet" href="/Users/britneyguillen/Desktop/2221-SWEN-101-02-06-6/britney.css">
     </head>
     <body>
-        <form action="desired Link">
-            <button><img src="https://www.pngitem.com/pimgs/m/82-820622_simple-transparent-background-clipart-house-transparent-background-home.png"></button>
-        </form>
+        <div class = "topLabel">
+            <h1 class = left>Fresh Value</h1>
+            <div class = "t2">
+                <a href="file:///Users/susantraut/Documents/SWEN%20REPO/2221-SWEN-101-02-06-6/HomePage.html">
+                    <h1>⬅</h1>
+                </a>
+                <!-- <h1>⬅</h1> -->
+            </div>
+
+        </div>
         <h1><span> Fitness Tracker </span></h1>
         <div class="activity">
             <h2>Activity:
@@ -92,6 +99,22 @@
         h5{
             text-align:bottom right;
             color:black;
+        }
+        .topLabel{
+            width: "screen";
+            height: 50;
+            background-color: aqua;
+            margin-left: 0;
+        }
+        text{
+            text-align: left;
+        }
+        .t2{
+            height: 50;
+            width: 50;
+            background-color: aqua;
+            margin-left: 2;
+            margin-top: -58.5;
         }
     </style>
 </html>
